<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            android:gravity="center">

            <TextView
                android:id="@+id/event_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <TextView
                android:id="@+id/event_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="12dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/logo_home"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center" />

                    <TextView
                        android:id="@+id/home_team"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/home_formation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/logo_away"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center" />

                    <TextView
                        android:id="@+id/away_team"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/away_formation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/home_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/vs"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/away_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/home_goal"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:paddingRight="8dp"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/goals"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/away_goal"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/home_shot"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingRight="8dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/shots"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/away_shot"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/lineup"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/home_gk"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:paddingRight="8dp"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/gk"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/away_gk"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/home_df"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:paddingRight="8dp"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/df"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/away_df"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/home_md"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:paddingRight="8dp"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/md"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/away_md"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/home_fw"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:paddingRight="8dp"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/fw"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/away_fw"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/home_sb"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:paddingRight="8dp"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/sb"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/away_sb"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:textSize="11sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
